image Location Update and try to center nav

--- a/First Project/index.html
+++ b/First Project/index.html
@@ -7,16 +7,19 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
-
+    
+      <!--custom css -->
+    <link href="css/main.css" type="text/css" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>Hello, world!</title>
   </head>
   <body>
    <section class = "n">
-<nav class="navbar navbar-expand-md fixed  navbar-light bg-dark">
-<a href="#" class="navbar-brand"><i class="fas fa-child fa-2x"></i></a>
+<nav class="navbar navbar-expand-md fixed  navbar-light bg-dark text-center">
+<!--<a href="#" class="navbar-brand"><i class="fas fa-child fa-2x"></i></a> -->
 
-  <ul class="navbar-nav">
+  <ul class="navbar-nav text-center">
 <li class="nav-item"><a href="#" class="nav-link text-light  px-3">Home</a></li>
 <li class="nav-item"><a href="#" class="nav-link text-light px-3">Services</a>
 </li>
@@ -112,15 +115,15 @@ Project
 </div>
 <div class="row text-center text-muted">
 <div class="col-lg-4">
-  <img src="/Imag/Skill (1).jpg" class="img-thumbnail p-2">
+  <img src="./img/Skill%20(1).jpg" class="img-thumbnail p-2">
   <h5>www.Becho.com</h5>
 </div>
 <div class="col-lg-4">
-    <img src="/Imag/Skill (2).jpg" class="img-thumbnail p-3">
+    <img src="./img/Skill%20(2).jpg" class="img-thumbnail p-3">
     <h5>www.Dekho.com</h5>
   </div>
   <div class="col-lg-4">
-      <img src="/Imag/Skill (3).jpg" class="img-thumbnail p-4">
+      <img src="./img/Skill%20(3).jpg" class="img-thumbnail p-4">
       <h5>www.sikho.com</h5>
     </div>
 
@@ -147,7 +150,7 @@ Project
 <div class="row text-center" style="height:auto;">
 <div class="col-md-4">
 <div class="card m-2">
-  <img class="card-img-top" src ="Imag/team1.png">
+  <img class="card-img-top" src ="./img/team1.png">
     <div class="card-body">
 <h5 class="card-title">Shadab Ali</h5>
 <p class="card-text">desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a 
@@ -167,7 +170,7 @@ Project
 </div>
 <div class="col-md-4">
     <div class="card m-2">
-      <img class="card-img-top" src ="Imag/team2.png";">
+      <img class="card-img-top" src ="./img/team2.png">
         <div class="card-body">
     <h5 class="card-title">Muskan rai</h5>
     <p class="card-text">desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a 
@@ -186,7 +189,7 @@ Project
     </div>
     <div class="col-md-4">
         <div class="card m-2">
-          <img class="card-img-top" src ="Imag/team1.png">
+          <img class="card-img-top" src ="./img/team1.png">
             <div class="card-body">
         <h5 class="card-title">Anushka</h5>
         <p class="card-text">desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a 
